Fixes cut off note-target on short screens.

--- a/src/sass/pages/_game.scss
+++ b/src/sass/pages/_game.scss
@@ -69,7 +69,7 @@
       background-image: url('../images/bell-empty@2x.png');
       background-size: 35px 70px;
     }
-    
+
     &.-joined {
       background: url('../images/bell.png') no-repeat center;
       opacity: 0.5;
@@ -99,7 +99,6 @@
 .note-target {
   height: 20%;
   left: 0;
-  overflow: hidden;
   position: absolute;
   text-align: center;
   top: 60%;
